gen/com/tpig/antlr/KiteDslParser.java
// Generated from /Users/jackwong/Documents/Program/ruoruo/dsl-demo/src/main/java/com/tpig/antlr/KiteDsl.g4 by ANTLR 4.7
package com.tpig.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KiteDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, Identifier=4, Digits=5, COLON=6, LPAREN=7, RPAREN=8, 
		LBRACK=9, RBRACK=10, DOT=11, NEWLINE=12;
	public static final int
		RULE_expr = 0, RULE_multipleCommonFieldName = 1, RULE_oneCommonFieldName = 2, 
		RULE_commonFieldName = 3, RULE_simpleFieldName = 4, RULE_arrayFieldName = 5, 
		RULE_defaultExpr = 6, RULE_formatExpr = 7, RULE_defaultValue = 8, RULE_formatValue = 9;
	public static final String[] ruleNames = {
		"expr", "multipleCommonFieldName", "oneCommonFieldName", "commonFieldName", 
		"simpleFieldName", "arrayFieldName", "defaultExpr", "formatExpr", "defaultValue", 
		"formatValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'default'", "'format'", null, null, "':'", "'('", "')'", 
		"'['", "']'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "Identifier", "Digits", "COLON", "LPAREN", "RPAREN", 
		"LBRACK", "RBRACK", "DOT", "NEWLINE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KiteDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KiteDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExprContext extends ParserRuleContext {
		public MultipleCommonFieldNameContext multipleCommonFieldName() {
			return getRuleContext(MultipleCommonFieldNameContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			multipleCommonFieldName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultipleCommonFieldNameContext extends ParserRuleContext {
		public List<OneCommonFieldNameContext> oneCommonFieldName() {
			return getRuleContexts(OneCommonFieldNameContext.class);
		}
		public OneCommonFieldNameContext oneCommonFieldName(int i) {
			return getRuleContext(OneCommonFieldNameContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(KiteDslParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KiteDslParser.NEWLINE, i);
		}
		public MultipleCommonFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleCommonFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterMultipleCommonFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitMultipleCommonFieldName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitMultipleCommonFieldName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipleCommonFieldNameContext multipleCommonFieldName() throws RecognitionException {
		MultipleCommonFieldNameContext _localctx = new MultipleCommonFieldNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_multipleCommonFieldName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(22);
				oneCommonFieldName();
				setState(23);
				match(NEWLINE);
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identifier );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OneCommonFieldNameContext extends ParserRuleContext {
		public List<CommonFieldNameContext> commonFieldName() {
			return getRuleContexts(CommonFieldNameContext.class);
		}
		public CommonFieldNameContext commonFieldName(int i) {
			return getRuleContext(CommonFieldNameContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(KiteDslParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(KiteDslParser.DOT, i);
		}
		public OneCommonFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneCommonFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterOneCommonFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitOneCommonFieldName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitOneCommonFieldName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OneCommonFieldNameContext oneCommonFieldName() throws RecognitionException {
		OneCommonFieldNameContext _localctx = new OneCommonFieldNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_oneCommonFieldName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			commonFieldName();
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(30);
				match(DOT);
				setState(31);
				commonFieldName();
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommonFieldNameContext extends ParserRuleContext {
		public SimpleFieldNameContext simpleFieldName() {
			return getRuleContext(SimpleFieldNameContext.class,0);
		}
		public ArrayFieldNameContext arrayFieldName() {
			return getRuleContext(ArrayFieldNameContext.class,0);
		}
		public CommonFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commonFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterCommonFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitCommonFieldName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitCommonFieldName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommonFieldNameContext commonFieldName() throws RecognitionException {
		CommonFieldNameContext _localctx = new CommonFieldNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_commonFieldName);
		try {
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				simpleFieldName();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				arrayFieldName();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleFieldNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(KiteDslParser.Identifier, 0); }
		public TerminalNode LPAREN() { return getToken(KiteDslParser.LPAREN, 0); }
		public DefaultExprContext defaultExpr() {
			return getRuleContext(DefaultExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(KiteDslParser.RPAREN, 0); }
		public FormatExprContext formatExpr() {
			return getRuleContext(FormatExprContext.class,0);
		}
		public SimpleFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterSimpleFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitSimpleFieldName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitSimpleFieldName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleFieldNameContext simpleFieldName() throws RecognitionException {
		SimpleFieldNameContext _localctx = new SimpleFieldNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simpleFieldName);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				match(Identifier);
				setState(43);
				match(LPAREN);
				setState(44);
				defaultExpr();
				setState(45);
				match(RPAREN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				match(Identifier);
				setState(48);
				match(LPAREN);
				setState(49);
				formatExpr();
				setState(50);
				match(RPAREN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				match(Identifier);
				setState(53);
				match(LPAREN);
				setState(54);
				defaultExpr();
				setState(55);
				match(T__0);
				setState(56);
				formatExpr();
				setState(57);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayFieldNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(KiteDslParser.Identifier, 0); }
		public TerminalNode LBRACK() { return getToken(KiteDslParser.LBRACK, 0); }
		public TerminalNode Digits() { return getToken(KiteDslParser.Digits, 0); }
		public TerminalNode RBRACK() { return getToken(KiteDslParser.RBRACK, 0); }
		public ArrayFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterArrayFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitArrayFieldName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitArrayFieldName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayFieldNameContext arrayFieldName() throws RecognitionException {
		ArrayFieldNameContext _localctx = new ArrayFieldNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayFieldName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(Identifier);
			setState(62);
			match(LBRACK);
			setState(63);
			match(Digits);
			setState(64);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefaultExprContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(KiteDslParser.COLON, 0); }
		public DefaultValueContext defaultValue() {
			return getRuleContext(DefaultValueContext.class,0);
		}
		public DefaultExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterDefaultExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitDefaultExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitDefaultExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefaultExprContext defaultExpr() throws RecognitionException {
		DefaultExprContext _localctx = new DefaultExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defaultExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__1);
			setState(67);
			match(COLON);
			setState(68);
			defaultValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormatExprContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(KiteDslParser.COLON, 0); }
		public FormatValueContext formatValue() {
			return getRuleContext(FormatValueContext.class,0);
		}
		public FormatExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formatExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterFormatExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitFormatExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitFormatExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormatExprContext formatExpr() throws RecognitionException {
		FormatExprContext _localctx = new FormatExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formatExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__2);
			setState(71);
			match(COLON);
			setState(72);
			formatValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefaultValueContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(KiteDslParser.Identifier, 0); }
		public DefaultValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterDefaultValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitDefaultValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitDefaultValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefaultValueContext defaultValue() throws RecognitionException {
		DefaultValueContext _localctx = new DefaultValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_defaultValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormatValueContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(KiteDslParser.Identifier, 0); }
		public FormatValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formatValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).enterFormatValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiteDslListener ) ((KiteDslListener)listener).exitFormatValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiteDslVisitor ) return ((KiteDslVisitor<? extends T>)visitor).visitFormatValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormatValueContext formatValue() throws RecognitionException {
		FormatValueContext _localctx = new FormatValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_formatValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}